<resources>
    <string name="app_name">VeeVapp Customer</string>

    <string name="try_again_later">مشکلی پیش اومده، لطفا دوباره امتحان کنید.</string>

    <string name="icon.arrow.right">A</string>
    <string name="icon.arrow.left">B</string>
    <string name="icon.place">C</string>
    <string name="icon.add.circle">D</string>
    <string name="icon.share">E</string>
    <string name="icon.phone">F</string>
    <string name="icon.shop">G</string>
    <string name="icon.pin">H</string>
    <string name="icon.mobile">I</string>
    <string name="icon.person">J</string>
    <string name="icon.exit">K</string>
    <string name="icon.list">L</string>
    <string name="icon.telegram">M</string>
    <string name="icon.sort">N</string>

    <string name="submit">ثبت</string>
    <string name="submit_request">ثبت درخواست</string>
    <string name="submit_report">ثبت تخلف</string>
    <string name="write_external_storage">برای ذخیره ی عکس نیاز به این دسترسی هست!</string>
    <string name="submit_first_request">ثبت اولین درخواست</string>
    <string name="request_product_name">اسم محصولی که مورد نیاز هست</string>
    <string name="description">توضیحات اضافی در مورد محصول</string>
    <string name="sending">در حال ارسال&#8230;</string>
    <string name="telegram_not_installed">ظاهرا تلگرام نداری</string>
    <string name="template_price">قیمت : %s تومان</string>
    <string name="template_previous_price">قیمت قبلی : %s تومان</string>
    <string name="template_shop">فروشگاه : %s</string>
    <string name="template_count">تعداد : %s</string>
    <string name="template_name">نام : %s %s</string>
    <string name="template_last_name">نام خانوادگی : %s</string>
    <string name="template_mobile">موبایل : %s</string>
    <string name="template_product_name">نام محصول : %s</string>
    <string name="telegram_id">آی دی تلگرام</string>
    <string name="next_step">مرحله بعد</string>
    <string name="name">نام</string>
    <string name="family">نام خانوادگی</string>
    <string name="please_enter_confirmation_code">لطفا کد چهار رقمی ارسال شده را وارد کنید</string>
    <string name="confirmation_code">کد چهار رقمی</string>
    <string name="send">ارسال</string>
    <string name="please_enter_mobile">لطفا شماره موبایل خود را وارد کنید</string>
    <string name="please_wait">لطفا صبر کنید</string>
    <string name="toast_enter_code">لطفا کد چهار رقمی ارسال شده به موبایل خود را وارد کنید</string>
    <string name="error_network_failure">دسترسی به اینترنت وجود نداره</string>
    <string name="error_wrong_code">کد وارد شده غلط است</string>
    <string name="toast_invalid_mobile_number">شماره تلفن خود را به صورت صحیح وارد کنید</string>
    <string name="toast_enter_your_mobile_number">شماره تلفن خود را وارد کنید</string>

    <string name="transition_special_offer_photo_index">transition.photo%1$d</string>
    <string name="special_offer">پیشنهاد ویژه</string>
    <string name="offers">پیشنهادها برای درخواست شما</string>

    <string name="yes">بله</string>
    <string name="no">خیر</string>
    <string name="logout">خروج</string>
    <string name="logout_confirmation">آیا واقعا خارج میشوید؟</string>
    <string name="no_buy_request_yet">تا کنون درخواستی ثبت نکرده اید</string>
    <string name="add_product_photo">افزودن عکس محصول (اختیاری)</string>
    <string name="change_product_photo">تغییر عکس محصول (اختیاری)</string>
    <string name="price">قیمت</string>
    <string name="suggest_price">قیمت پیشنهادی</string>
    <string name="desc">توضیحات</string>
    <string name="seller_desc">توضیحات فروشنده</string>
    <string name="seller_name">نام فروشنده</string>
    <string name="phone_number">شماره موبایل</string>
    <string name="shop_address">آدرس فروشگاه</string>
    <string name="telegram">تلگرام</string>
    <string name="shop">فروشگاه</string>
    <string name="toman">تومان</string>
    <string name="offer">پیشنهاد</string>

    <string name="select_cat">انتخاب دسته</string>
    <string name="select_report_type">انتخاب نوع گزارش</string>
    <string name="select_subcat">انتخاب زیر دسته</string>
    <string name="select_color">انتخاب رنگ</string>

    <string name="template_share_recipe">یه پیشنهاد ویژه \n محصول: %s \n قیمت: %d تومان \n\n %s</string>

    <string name="enter_product_name_validation_error">نام محصول را به درستی وارد نمایید</string>
    <string name="enter_desc_validation_error">توضیحات را به درستی وارد نمایید</string>
    <string name="enter_count_validation_error">تعداد را به درستی وارد نمایید</string>
    <string name="select_cat_validation_error">دسته بندی را انتخاب کنید</string>
    <string name="select_sub_cat_validation_error">زیر دسته را انتخاب کنید</string>
    <string name="show_on_map">نمایش روی نقشه</string>
    <string name="day">روز</string>
    <string name="share_special_offer">اشتراک گذاری این پیشنهاد</string>


    <string name="do_filter">فیلتر کردن</string>
    <string name="do_sort">مرتب سازی</string>
    <string name="filter_now">فیلتر کن</string>
    <string name="report_type">نوع گزارش</string>
    <string name="report">گزارش تخلف</string>

    <string name="please_fill_this_field">لطفا این فیلد را پر کنید</string>

</resources>
