<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/template_header" />

    <EditText
        android:id="@+id/name"
        style="@style/primary_edittext"
        android:hint="@string/name"
        android:imeOptions="actionNext"
        android:text="esm" />

    <EditText
        android:id="@+id/family"
        style="@style/primary_edittext"
        android:hint="@string/family"
        android:imeOptions="actionDone"
        android:text="famil" />

    <EditText
        android:id="@+id/mobile_number"
        style="@style/primary_edittext"
        android:enabled="false"
        android:inputType="phone"
        android:text="09379706209" />

    <EditText
        android:id="@+id/telegram_id"
        style="@style/primary_edittext"
        android:hint="@string/telegram_id"
        android:text="mehdi_k45"
        android:visibility="invisible" />

    <Button
        android:id="@+id/button_next_step"
        style="@style/primary_button"
        android:layout_gravity="center_horizontal"
        android:text="@string/submit" />

</LinearLayout>