<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:padding="8dp"
        android:clipToPadding="false"
        android:gravity="center"
        >

        <com.veevapp.customer.view.customwidget.AppTextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/template_name"
            android:fontFamily="@font/iransans"
            android:textColor="@color/black"
            android:gravity="right|center"
            android:layout_marginBottom="8dp"
            />

        <com.veevapp.customer.view.customwidget.AppTextView
            android:id="@+id/tv_lastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/template_last_name"
            android:fontFamily="@font/iransans"
            android:textColor="@color/black"
            android:gravity="right|center"
            android:layout_marginBottom="8dp"
            />


        <com.veevapp.customer.view.customwidget.AppTextView
            android:id="@+id/tv_phoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/template_mobile"
            android:fontFamily="@font/iransans"
            android:textColor="@color/black"
            android:gravity="right|center"
            android:layout_marginBottom="16dp"
            />


        <Button
            android:id="@+id/btn_logout"
            style="@style/primary_button"
            android:layout_gravity="center_horizontal"
            android:text="@string/logout"
            />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>